samples/_failures_safe/1761267771_8b35b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ccc19d9.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
